--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <header class="menu-bg">
-    <div class="container menu">
+    <div class="menu">
       <div class="menu-logo">
         <a href="#">ChessToTAL</a>
       </div>
@@ -28,12 +28,27 @@
   </header>
 
   <section class="introducao">
-    <div class="container intro-text">
+    <div class="intro-text">
       <h1>Desmitificando o Xadrez todos os dias.</h1>
       <blockquote>
         <p>"O xadrez é uma questão de discernimento delicado, saber quando dar um soco e como se esquivar."</p>
         <cite>Bobby Fischer</cite>
       </blockquote>
+    </div>
+  </section>
+
+  <section class="xadrez">
+
+    <h2 class="title">Principios do Xadrez</h2>
+    <div class="xadrez-principios">
+      <div class="principios-info">
+        <p>O Xadrez é um jogo composto por 32 peças, 16 brancas, e 16 pretas. O jogador com as peças brancas inicia a partida, o de pretas faz o contra-lance. Xadrez é um jogo por turnos, cada jogador faz uma jogada por vez (move uma peça). As peças são divididas em 6 classes: peõs, cavalos, bispos, torres, dama e Rei.</p>
+        <p>Cada peça possui seu valor, sendo a peça de maior valor o Rei, seguido da dama (9 pontos), torre (5 pontos), bispo (3 pontos), cavalo (3 pontos), e com o menor valor agregado, peão (1 ponto). Embora não seja um conceito tão básico, é bom se acostumar com a ideia de pontos, isso é útil para calcular material e descobrir se você tem vantagem.</p>
+        <p>O objetivo do xadrez é a captura do Rei adversário, você usará estratégias e táticas para cercar o monarca e deixa-lo sem ter para onde ir.</p>
+      </div>
+      <div class="principios-img">
+        <img src="/img/img-01.jpg" alt="Xadrez">
+      </div>
     </div>
   </section>
 </body>
