--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <section class="introducao">
     <div class="intro-text">
-      <h1>Desmitificando o Xadrez todos os dias.</h1>
+      <h1>Desmitificando o Xadrez.</h1>
       <blockquote>
         <p>"O xadrez é uma questão de discernimento delicado, saber quando dar um soco e como se esquivar."</p>
         <cite>Bobby Fischer</cite>
@@ -37,9 +37,8 @@
     </div>
   </section>
 
-  <section class="xadrez">
-
-    <h2 class="title">Principios do Xadrez</h2>
+  <section>
+    <h2 class="titulo">Principios do Xadrez</h2>
     <div class="xadrez-principios">
       <div class="principios-info">
         <p>O Xadrez é um jogo composto por 32 peças, 16 brancas, e 16 pretas. O jogador com as peças brancas inicia a partida, o de pretas faz o contra-lance. Xadrez é um jogo por turnos, cada jogador faz uma jogada por vez (move uma peça). As peças são divididas em 6 classes: peõs, cavalos, bispos, torres, dama e Rei.</p>
@@ -51,5 +50,46 @@
       </div>
     </div>
   </section>
+
+  <section>
+    <h2 class="titulo">As peças de Xadrez</h2>
+    <div class="pecas">   
+      <ul class="lista-pecas">
+        <li><img src="img/chess-pieces/peao.jpg" alt="peão"></li>
+        <li><img src="img/chess-pieces/cavalo.jpeg" alt="cavalo"></li>
+        <li><img src="img/chess-pieces/bispo.jpeg" alt="bispo"></li>
+        <li><img src="img/chess-pieces/torre.jpg" alt="torre"></li>
+        <li><img src="img/chess-pieces/rainha.jpg" alt="rainha"></li>
+        <li><img src="img/chess-pieces/rei.jpeg" alt="rei"></li>
+      </ul>
+      <div class="xadrez-peca-info">
+        <section>
+          <h3>Peão</h3>
+          <p>O Peão é uma peça menor do xadrez ocidental. No início de uma partida, cada jogador tem oito peças que são dispostas nas fileiras 2 para as brancas e 7 para as pretas. O peão move-se verticalmente na coluna que encontra-se, sendo incapaz de recuar.</p>
+        </section>
+        <section>
+          <h3>Cavalo</h3>
+          <p>O cavalo é uma peça menor do xadrez ocidental de um valor aproximado de três peões. Tem um movimento assemelhado a um "L" e, diferente das outras peças, pode pular as peças intervenientes. Captura tomando a casa ocupada pela peça adversária, sendo sempre no final do L.</p>
+        </section>
+        <section>
+          <h3>Bispo</h3>
+          <p>O Bispo é uma peça menor do xadrez ocidental de valor aproximado de três peões. Movimenta-se em diagonal, não podendo pular peças intervenientes, e captura tomando o lugar ocupado pela peça adversária.</p>
+        </section>
+        <section>
+          <h3>Torre</h3>
+          <p>A Torre é uma peça maior do xadrez, empregada usualmente na fase final do jogo devido ao seu valor estratégico e tático, sendo amplamente estudada na literatura sobre o enxadrismo.</p>
+        </section>
+        <section>
+          <h3>Dama</h3>
+          <p>A Dama ou Rainha é uma peça maior do jogo de xadrez, representada nos países lusófonos pela letra D nas notações algébricas. É a peça de maior valor relativo do jogo, usualmente valorada entre nove e dez pontos. Assim como a Torre, é capaz de, com o auxílio do seu Rei, vencer uma partida contra um Rei solitário.</p>
+        </section>
+        <section>
+          <h3>Rei</h3>
+          <p>O Rei é a peça mais importante do xadrez ocidental, cuja captura é o único objetivo do jogo. Nos países lusófonos, o rei é representado pela letra R na notação algébrica de xadrez. Uma vez que não pode ser trocado durante uma partida, ele é considerado uma peça de valor inestimável.</p>
+        </section>
+      </div>
+    </div>
+  </section>
+  <script src="js/script.js"></script>
 </body>
 </html>
