--- a/index.html
+++ b/index.html
@@ -55,17 +55,20 @@
     <h2 class="titulo">As peças de Xadrez</h2>
     <div class="pecas">   
       <ul class="lista-pecas">
-        <li><img src="img/chess-pieces/peao.jpg" alt="peão"></li>
-        <li><img src="img/chess-pieces/cavalo.jpeg" alt="cavalo"></li>
-        <li><img src="img/chess-pieces/bispo.jpeg" alt="bispo"></li>
-        <li><img src="img/chess-pieces/torre.jpg" alt="torre"></li>
-        <li><img src="img/chess-pieces/rainha.jpg" alt="rainha"></li>
-        <li><img src="img/chess-pieces/rei.jpeg" alt="rei"></li>
+        <li><img src="img/chess-pieces/peao.png" alt="peão"></li>
+        <li><img src="img/chess-pieces/cavalo.png" alt="cavalo"></li>
+        <li><img src="img/chess-pieces/bispo.png" alt="bispo"></li>
+        <li><img src="img/chess-pieces/torre.png" alt="torre"></li>
+        <li><img src="img/chess-pieces/rainha.png" alt="rainha"></li>
+        <li><img src="img/chess-pieces/rei.png" alt="rei"></li>
       </ul>
       <div class="xadrez-peca-info">
         <section>
           <h3>Peão</h3>
           <p>O Peão é uma peça menor do xadrez ocidental. No início de uma partida, cada jogador tem oito peças que são dispostas nas fileiras 2 para as brancas e 7 para as pretas. O peão move-se verticalmente na coluna que encontra-se, sendo incapaz de recuar.</p>
+          <div class="move-img">
+            <img src="img/move-piece/peao.png" alt="movimento peão">
+          </div>
         </section>
         <section>
           <h3>Cavalo</h3>
