exemplo de movimento

--- a/index.html
+++ b/index.html
@@ -66,9 +66,6 @@
         <section>
           <h3>Peão</h3>
           <p>O Peão é uma peça menor do xadrez ocidental. No início de uma partida, cada jogador tem oito peças que são dispostas nas fileiras 2 para as brancas e 7 para as pretas. O peão move-se verticalmente na coluna que encontra-se, sendo incapaz de recuar.</p>
-          <div class="move-img">
-            <img src="img/move-piece/peao.png" alt="movimento peão">
-          </div>
         </section>
         <section>
           <h3>Cavalo</h3>
@@ -90,6 +87,26 @@
           <h3>Rei</h3>
           <p>O Rei é a peça mais importante do xadrez ocidental, cuja captura é o único objetivo do jogo. Nos países lusófonos, o rei é representado pela letra R na notação algébrica de xadrez. Uma vez que não pode ser trocado durante uma partida, ele é considerado uma peça de valor inestimável.</p>
         </section>
+      </div>
+      <div class="move-peca">
+        <div>
+          <img src="img/move-piece/peao.png" alt="movimento peão">
+        </div>
+        <div>
+          <img src="img/move-piece/cavalo.png" alt="movimento peão">
+        </div>
+        <div>
+          <img src="img/move-piece/bispo.png" alt="movimento peão">
+        </div>
+        <div>
+          <img src="img/move-piece/rook.png" alt="movimento peão">
+        </div>
+        <div>
+          <img src="img/move-piece/queen.png" alt="movimento peão">
+        </div>
+        <div>
+          <img src="img/move-piece/king.png" alt="movimento peão">
+        </div>
       </div>
     </div>
   </section>
