--- a/index.html
+++ b/index.html
@@ -110,6 +110,41 @@
       </div>
     </div>
   </section>
+
+  <section class="xadrez-aberturas">
+    <h2 class="titulo">Principais Aberturas</h2>
+
+    <div class="aberturas">
+      <h3>Abertura Italiana (Giuoco Piano) </h3>
+      <p>Abertura italiana é uma abertura de xadrez caracterizada pelos lances: 1.e4 e5 2.♘f3 ♘c6 3.♗c4 A abertura é definida pelo desenvolvimento do bispo branco para c4, onde ataca o quadrado vulnerável f7 das pretas. Faz parte da grande família de Abertura aberta ou Double King's Pawn Games.</p>
+      <img src="/img/chess-opening/italiana.png" alt="abertura italiana">
+    </div>
+
+    <div class="aberturas">
+      <h3>Ruy López</h3>
+      <p>A abertura Ruy López, também chamada de abertura espanhola, é uma famosa abertura de xadrez. Trata-se, talvez, da abertura mais famosa do xadrez, devendo o seu nome ao célebre enxadrista espanhol do século XVI Ruy López de Segura. É caracterizada pelos movimentos 1.e4 e5 2.♘f3 ♘c6 3.♗b5</p>
+      <img src="/img/chess-opening/ruylopez.png" alt="ruy lopez">
+    </div>
+
+    <div class="aberturas">
+      <h3>Abertura Escocesa </h3>
+      <p>Abertura Escocesa é uma abertura de xadrez caracterizada pelos lances: 1.e4 e5 2.♘f3 ♘c6 3.d4 Esta abertura recebeu o seu nome devido a uma partida por correspondência ocorrido em 1824 entre as cidades de Edinburgo e Londres.</p>
+      <img src="/img/chess-opening/escocesa.gif" alt="abertura escocesa">
+    </div>
+
+    <div class="aberturas">
+      <h3>Gambito da Rainha</h3>
+      <p>O Gambito da Dama é uma abertura de xadrez do grupo das aberturas do peão da dama caracterizada pelos movimentos: d4 d5 c4 A variante em que as pretas capturam o peão em c4 é o Gambito da Dama Aceito, e as variantes com outros lances são o Gambito da Dama Recusado.</p>
+      <img src="/img/chess-opening/gambito-da-dama.gif" alt="gambito rainha">
+    </div>
+
+    <div class="aberturas">
+      <h3>Defesa Siciliana</h3>
+      <p>A Defesa Siciliana é a denominação de uma defesa de xadrez das peças negras. As brancas fazem e4, o primeiro lance, que é do peão do Rei das brancas, em seguida as negras respondem com c5. 1.e4 c5 Jaenish, Van der Lasa e Staunton consideravam esta a melhor resposta das negras a 1.e4.</p>
+      <img src="/img/chess-opening/defesa-siciliana.gif" alt="gambito rainha">
+    </div>
+  </section>
+
   <script src="js/script.js"></script>
 </body>
 </html>
