--- a/index.html
+++ b/index.html
@@ -145,6 +145,45 @@
     </div>
   </section>
 
+  <section class="jogadores">
+    <h2 class="titulo">Grandes Jogadores de Xadrez</h2>
+    <div class="jogador">
+      <img src="/img/players/carlsen.jpg" alt="Magnus Carlsen">
+      <div class="jogador-descricao">
+        <h3>Magnus Carlsen</h3>
+        <dl class="jogador-info">
+          <dt>Quem é?</dt>
+          <dd>Atual campeão mundial de xadrez, e considerado por muitos, um dos melhores da história. É um jogador fatal, especialista em finais, e atualmente lidera o ranking nas três principais modalidades de xadrez: pensadas, rápidas e blitz. É considerado por Garry Kasparov uma combinação letal de Karpov e Fischer.</dd>
+          <dt>Principais títulos</dt>
+          <ul>
+            <li>Torneio de candidatos de Londres (2013)</li>
+            <li>Mundial de Xadrez Blitz (2014, 2017, 2018, 2019)</li>
+            <li>Mundial de Xadrez Rápido (2014, 2015, 2019)</li>
+            <li>Tata Steel Chess Tournament  (2008, 2010, 2013, 2015, 2016, 2018, 2019)</li>
+            <li>London Chess Classic (2009, 2010, 2012)</li>
+          </ul>
+          <dt>Maior Rating FIDE</dt>
+          <dd>2876</dd>
+        </dl>
+    </div>
+    <div class="jogador">
+      <img src="/img/players/bobby-fischer.png" alt="Magnus Carlsen">
+      <div class="jogador-descricao">
+        <h3>Robert James Fischer</h3>
+        <dl class="jogador-info">
+          <dt>Quem é?</dt>
+          <dd>Foi um grande mestre de xadrez americano e décimo quarto campeão mundial de xadrez. Em 1972, venceu o Campeonato Mundial de Xadrez ao derrotar o soviético Boris Spassky em uma partida disputada em Reykjavík, Islândia, considerada um confronto símbolo da Guerra Fria, que atraiu um interesse midiático maior que qualquer outra partida de xadrez já disputada. Em 1975, Fischer recusou-se a defender seu título ao não chegar a um acordo com a Federação Internacional de Xadrez (FIDE) em relação ao modelo de disputa da partida.</dd>
+          <dt>Principais títulos</dt>
+          <ul>
+            <li>Campeonato americano (1957, 1958, 1959, 1960, 1961, 1962, 1963, 1965 e 1966)</li>
+            <li>Campeonato Mundial de Xadrez (1975)</li>
+          </ul>
+          <dt>Maior Rating FIDE</dt>
+          <dd>2870</dd>
+        </dl>
+    </div>
+    </div>
+  </section>
   <script src="js/script.js"></script>
 </body>
 </html>
