--- a/index.html
+++ b/index.html
@@ -145,43 +145,107 @@
     </div>
   </section>
 
-  <section class="jogadores">
-    <h2 class="titulo">Grandes Jogadores de Xadrez</h2>
-    <div class="jogador">
-      <img src="/img/players/carlsen.jpg" alt="Magnus Carlsen">
-      <div class="jogador-descricao">
-        <h3>Magnus Carlsen</h3>
-        <dl class="jogador-info">
-          <dt>Quem é?</dt>
-          <dd>Atual campeão mundial de xadrez, e considerado por muitos, um dos melhores da história. É um jogador fatal, especialista em finais, e atualmente lidera o ranking nas três principais modalidades de xadrez: pensadas, rápidas e blitz. É considerado por Garry Kasparov uma combinação letal de Karpov e Fischer.</dd>
-          <dt>Principais títulos</dt>
-          <ul>
-            <li>Torneio de candidatos de Londres (2013)</li>
-            <li>Mundial de Xadrez Blitz (2014, 2017, 2018, 2019)</li>
-            <li>Mundial de Xadrez Rápido (2014, 2015, 2019)</li>
-            <li>Tata Steel Chess Tournament  (2008, 2010, 2013, 2015, 2016, 2018, 2019)</li>
-            <li>London Chess Classic (2009, 2010, 2012)</li>
-          </ul>
-          <dt>Maior Rating FIDE</dt>
-          <dd>2876</dd>
-        </dl>
-    </div>
-    <div class="jogador">
-      <img src="/img/players/bobby-fischer.png" alt="Magnus Carlsen">
-      <div class="jogador-descricao">
-        <h3>Robert James Fischer</h3>
-        <dl class="jogador-info">
-          <dt>Quem é?</dt>
-          <dd>Foi um grande mestre de xadrez americano e décimo quarto campeão mundial de xadrez. Em 1972, venceu o Campeonato Mundial de Xadrez ao derrotar o soviético Boris Spassky em uma partida disputada em Reykjavík, Islândia, considerada um confronto símbolo da Guerra Fria, que atraiu um interesse midiático maior que qualquer outra partida de xadrez já disputada. Em 1975, Fischer recusou-se a defender seu título ao não chegar a um acordo com a Federação Internacional de Xadrez (FIDE) em relação ao modelo de disputa da partida.</dd>
-          <dt>Principais títulos</dt>
-          <ul>
-            <li>Campeonato americano (1957, 1958, 1959, 1960, 1961, 1962, 1963, 1965 e 1966)</li>
-            <li>Campeonato Mundial de Xadrez (1975)</li>
-          </ul>
-          <dt>Maior Rating FIDE</dt>
-          <dd>2870</dd>
-        </dl>
-    </div>
+  <section class="bg-dark">
+    <div class="jogadores">
+      <h2 class="titulo-branco">Grandes Jogadores de Xadrez</h2>
+      <div class="jogador">
+        <img src="/img/players/carlsen.png" alt="Magnus Carlsen">
+        <div class="jogador-descricao">
+          <h3>Magnus Carlsen</h3>          
+          <dl class="jogador-info">
+            <dt>Quem é?</dt>
+            <dd>Atual campeão mundial de xadrez, e considerado por muitos, um dos melhores da história. É um jogador fatal, especialista em finais, e atualmente lidera o ranking nas três principais modalidades de xadrez: pensadas, rápidas e blitz. É considerado por Garry Kasparov uma combinação letal de Karpov e Fischer.</dd>
+            <dt>Principais títulos</dt>
+              <ul>
+                <li>Torneio de candidatos de Londres (2013)</li>
+                <li>Mundial de Xadrez Blitz (2014, 2017, 2018, 2019)</li>
+                <li>Mundial de Xadrez Rápido (2014, 2015, 2019)</li>
+                <!-- <li>Tata Steel Chess Tournament  (2008, 2010, 2013, 2015, 2016, 2018, 2019)</li>
+                <li>London Chess Classic (2009, 2010, 2012)</li> -->
+              </ul>
+            <dt>Maior Rating FIDE</dt>
+            <dd>2876</dd>
+          </dl>
+        </div>
+      </div>
+      <div class="jogador">
+        <div>
+          <img src="/img/players/fischer.png" alt="Bobby Fischer">
+        </div> 
+        <div class="jogador-descricao">
+          <h3>Robert James Fischer</h3>
+          <dl class="jogador-info">
+            <dt>Quem é?</dt>
+            <dd>Foi um grande mestre de xadrez americano e décimo quarto campeão mundial de xadrez. Em 1972, venceu o Campeonato Mundial de Xadrez ao derrotar o soviético Boris Spassky em uma partida disputada em Reykjavík, Islândia, considerada um confronto símbolo da Guerra Fria, que atraiu um interesse midiático maior que qualquer outra partida de xadrez já disputada.</dd>
+            <dt>Principais títulos</dt>
+            <ul>
+              <li>Campeonato americano (1957, 1958, 1959, 1960, 1961, 1962, 1963, 1965 e 1966)</li>
+              <li>Campeonato Mundial de Xadrez (1972)</li>
+            </ul>
+            <dt>Maior Rating FIDE</dt>
+            <dd>2870</dd>
+          </dl>
+        </div>
+      </div>
+
+      <div class="jogador">
+        <div>
+          <img src="/img/players/karpov.png" alt="Anatoly Karpov">
+        </div> 
+        <div class="jogador-descricao">
+          <h3>Anatoly Karpov</h3>
+          <dl class="jogador-info">
+            <dt>Quem é?</dt>
+            <dd>Anatoly Evienvich Karpov é um grande mestre de xadrez russo. Foi campeão mundial de xadrez de 1975 a 1985 e de 1993 a 1999, totalizando 16 anos com o título mundial e tornando-se o campeão mundial que mais partidas realizou em disputa direta pelo título ou em sua defesa.</dd>
+            <dt>Principais títulos</dt>
+            <ul>
+              <li>Campeonato Mundial 1975-1985, 1993-1998,</li>
+              <li>Campeonato Mundial de rápidas 1988</li>
+            </ul>
+            <dt>Maior Rating FIDE</dt>
+            <dd>2780</dd>
+          </dl>
+        </div>
+      </div>
+
+      <div class="jogador">
+        <div>
+          <img src="/img/players/karpov.png" alt="Garry Kasparov">
+        </div> 
+        <div class="jogador-descricao">
+          <h3>Garry Kasparov</h3>
+          <dl class="jogador-info">
+            <dt>Quem é?</dt>
+            <dd>Garry Kasparov é um Grande Mestre e ex-campeão mundial de xadrez, escritor e ativista político nascido na República Socialista Soviética do Azerbaijão, União Soviética. É considerado por muitos o maior enxadrista de todos os tempos.</dd>
+            <dt>Principais títulos</dt>
+            <ul>
+              <li>Campeonato Mundial 1985–1992, 1993–2000</li>
+              <li>Campeonato Mundial de rápidas 1988</li>
+            </ul>
+            <dt>Maior Rating FIDE</dt>
+            <dd>2851</dd>
+          </dl>
+        </div>
+      </div>
+
+      <div class="jogador">
+        <div>
+          <img src="/img/players/tal.png" alt="Mikhail Tal">
+        </div> 
+        <div class="jogador-descricao">
+          <h3>Anatoly Karpov</h3>
+          <dl class="jogador-info">
+            <dt>Quem é?</dt>
+            <dd>Mikhail Nekhemievich Tal, foi um dos maiores enxadristas de todos os tempos, considerado por muitos como o maior atacante do xadrez, de origem letão soviético e oitavo Campeão Mundial de Xadrez. Era conhecido pelo seu estilo agressivo de jogo, sendo chamado de "O Mago de Riga".</dd>
+            <dt>Principais títulos</dt>
+            <ul>
+              <li>Campeonato Mundial 1969</li>
+            </ul>
+            <dt>Maior Rating FIDE</dt>
+            <dd>2705</dd>
+          </dl>
+        </div>
+      </div>
     </div>
   </section>
   <script src="js/script.js"></script>
