--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
       <div class="jogador">
         <div>
-          <img src="/img/players/karpov.png" alt="Garry Kasparov">
+          <img src="/img/players/kasparov.png" alt="Garry Kasparov">
         </div> 
         <div class="jogador-descricao">
           <h3>Garry Kasparov</h3>
@@ -233,7 +233,7 @@
           <img src="/img/players/tal.png" alt="Mikhail Tal">
         </div> 
         <div class="jogador-descricao">
-          <h3>Anatoly Karpov</h3>
+          <h3>Mikhail Tal</h3>
           <dl class="jogador-info">
             <dt>Quem é?</dt>
             <dd>Mikhail Nekhemievich Tal, foi um dos maiores enxadristas de todos os tempos, considerado por muitos como o maior atacante do xadrez, de origem letão soviético e oitavo Campeão Mundial de Xadrez. Era conhecido pelo seu estilo agressivo de jogo, sendo chamado de "O Mago de Riga".</dd>
@@ -248,6 +248,39 @@
       </div>
     </div>
   </section>
+
+  <section>
+    <h2 class="titulo">Canais de Xadrez no YouTube</h2>
+    <div class="canais">
+      <div class="xadrez-brasil">
+        <h3>Xadrez Brasil</h3>
+        <a href="https://www.youtube.com/channel/UC5K-TQsItHnNLjqYf8A3CTw" target="_blank"><img src="img/canais/xadrez-brasil.jpg" alt="xadrez brasil"></a>
+        <p>O melhor canal para quem aprender xadrez, simples, didádico, e bem humorado. Rafael análisa partidas atuais e do passado, tendo em seu canal a Saga dos Campeõs Mundiais de La Bordonas a Magnus Carlsen.</p>
+      </div>
+      <div class="rafa-chess">
+        <h3>Rafael Chess</h3>
+        <a href="https://www.youtube.com/channel/UCSAo4zvM1oAJ_i4C6q6ejBA" target="_blank"><img src="img/canais/rafael-chess.png" alt="rafa-chess"></a>
+        <p>É um bom jogador, e faz boas análises.</p>
+      </div>
+      <div class="rafa-chess">
+        <h3>GM Krikor</h3>
+        <a href="https://www.youtube.com/user/randon2009" target="_blank"><img src="img/canais/krikor.png" alt="krikor"></a>
+        <p>Grande Mestre de xadrez, e um dos melhores do Brasil, possui grande conhecimento enxadristico, e já foi campeão nacional 2x.</p>
+      </div>
+    </div>
+  </section>
+
+  <div class="quebra">
+    <blockquote>
+      <p>"O xadrez é um jogo absolutamente lógico que tem suas leis gerais que se podem compreender intuitivamente ou trabalhando muitíssimo."</p>
+      <cite>Garry Kasparov</cite>
+    </blockquote>
+  </div>
+
+  <footer class="footer">
+    <p>Chess Total @todos os direitos reservados</p>
+    <p>Desenvolvido por Matheus Galote</p>
+  </footer>
   <script src="js/script.js"></script>
 </body>
 </html>
