mobile final ajustes

--- a/index.html
+++ b/index.html
@@ -146,10 +146,12 @@
   </section>
 
   <section class="bg-dark">
+    <h2 class="titulo-branco">Grandes Jogadores de Xadrez</h2>
     <div class="jogadores">
-      <h2 class="titulo-branco">Grandes Jogadores de Xadrez</h2>
       <div class="jogador">
-        <img src="/img/players/carlsen.png" alt="Magnus Carlsen">
+        <div>
+          <img src="/img/players/carlsen.png" alt="Magnus Carlsen">
+        </div> 
         <div class="jogador-descricao">
           <h3>Magnus Carlsen</h3>          
           <dl class="jogador-info">
@@ -160,8 +162,6 @@
                 <li>Torneio de candidatos de Londres (2013)</li>
                 <li>Mundial de Xadrez Blitz (2014, 2017, 2018, 2019)</li>
                 <li>Mundial de Xadrez Rápido (2014, 2015, 2019)</li>
-                <!-- <li>Tata Steel Chess Tournament  (2008, 2010, 2013, 2015, 2016, 2018, 2019)</li>
-                <li>London Chess Classic (2009, 2010, 2012)</li> -->
               </ul>
             <dt>Maior Rating FIDE</dt>
             <dd>2876</dd>
