javascript suave scroll

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
       </div>
       <nav class="menu-nav">
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Sobre</a></li>
-          <li><a href="#">Contato</a></li>
+          <li><a href="#principios">Principios</a></li>
+          <li><a href="#pecas">Peças</a></li>
+          <li><a href="#aberturas">Aberturas</a></li>
+          <li><a href="#jogadores">Jogadores</a></li>
         </ul>
       </nav>
     </div>
@@ -37,7 +38,7 @@
     </div>
   </section>
 
-  <section>
+  <section id="principios">
     <h2 class="titulo">Principios do Xadrez</h2>
     <div class="xadrez-principios">
       <div class="principios-info">
@@ -51,7 +52,7 @@
     </div>
   </section>
 
-  <section>
+  <section id="pecas">
     <h2 class="titulo">As peças de Xadrez</h2>
     <div class="pecas">   
       <ul class="lista-pecas">
@@ -111,7 +112,7 @@
     </div>
   </section>
 
-  <section class="xadrez-aberturas">
+  <section class="xadrez-aberturas" id="aberturas">
     <h2 class="titulo">Principais Aberturas</h2>
 
     <div class="aberturas">
@@ -145,7 +146,7 @@
     </div>
   </section>
 
-  <section class="bg-dark">
+  <section class="bg-dark" id="jogadores">
     <h2 class="titulo-branco">Grandes Jogadores de Xadrez</h2>
     <div class="jogadores">
       <div class="jogador">
