--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <span id="hamburger"></span>
       </button>
       <ul id="menu" role="menu">
-        <li><a href="#principios">Principios</a></li>
-        <li><a href="#pecas">Peças</a></li>
-        <li><a href="#aberturas">Aberturas</a></li>
-        <li><a href="#jogadores">Jogadores</a></li>
+        <li><a href="#principios" class="menu__link">Principios</a></li>
+        <li><a href="#pecas" class="menu__link">Peças</a></li>
+        <li><a href="#aberturas" class="menu__link">Aberturas</a></li>
+        <li><a href="#jogadores" class="menu__link">Jogadores</a></li>
       </ul>
     </nav>
   </header>
